--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,16 +3,29 @@
 <html lang="en">
   <head>
     <title>{% block title %}{% endblock %}</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/basic.css' %}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'css/basic.css' %}" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
-  <body>
-    <div id="content">
-      {% block content %}{% endblock %}
+  <header class="header">
+    <div class="logo">
+      <img src="{% static 'img/logo.png' %}" alt="logo" />
+      <h1>WeeklyBites</h1>
     </div>
+    <nav>
+      <ul>
+        <li>
+          <a href="">item1</a>
+          <a href="">item2</a>
+          <a href="">item3</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <body>
+    <div id="content">{% block content %}{% endblock %}</div>
   </body>
 </html>
