--- a/src/templates/home/recipe_detail.html
+++ b/src/templates/home/recipe_detail.html
@@ -7,15 +7,17 @@
 
 {% block content %}
 
-<img src="{{recipe.img}}?interpolation=lanczos-none&fit=around|320:320&crop=320:320;*,*">
-<p>{{recipe.recipeName}}</p>
+<div class="recipe_details">
+<img class="recipe_details_img" src="{{recipe.img}}?interpolation=lanczos-none&fit=around|320:320&crop=320:320;*,*">
+<h1 class="recipe_details_title">{{recipe.recipeName}}</h1>
 {% with recipe.ingredients|split:"、" as ingredients %}
   {% for ingredient in ingredients %}
-    <a href="{% url 'external:rakuten_ichiba_item_search' %}?grocery_name={{ ingredient }}" target="_blank">
+    <a class="recipe_details_link" href="{% url 'external:rakuten_ichiba_item_search' %}?grocery_name={{ ingredient }}" target="_blank">
       {{ ingredient }}
     </a>
     <br>
   {% endfor %}
 {% endwith %}
+</div>
 
 {% endblock %}
