--- a/src/static/css/basic.css
+++ b/src/static/css/basic.css
@@ -10,6 +10,10 @@
   box-sizing: border-box;
 }
 
+#content {
+  margin: 0 10%;
+}
+
 
 header {
   display: flex;
@@ -42,6 +46,66 @@ nav ul li a:hover {
   text-decoration: underline;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+form p {
+  width: 100%;
+  margin: .5rem 0;
+}
+
+form p input {
+  padding: 12px;
+  margin: 5px 0;
+  width: 30%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+form p input:focus {
+  border-color: #007bff;
+  box-shadow: 0 4px 10px rgba(0, 123, 255, 0.2);
+}
+
+form p label {
+  margin-right: 15px;
+  font-weight: bold;
+  color: #333;
+}
+
+form p input:hover {
+  border-color: #007bff;
+  box-shadow: 0 4px 10px rgba(0, 123, 255, 0.1);
+}
+
+form p span::before {
+  content: "※ ";
+  color: red;
+}
+
+form p span {
+  display: block; /* Forces the content to start on a new line */
+  margin: 0;
+}
+
+form ul {
+  width: 100%;
+  margin: 0;
+  text-align: left;
+}
+
+form ul li {
+  list-style: none;
+  font-size: small;
+}
+
+
 .header h1 {
   font-size: 24px;
   margin: 0;
@@ -55,6 +119,13 @@ nav ul li a:hover {
 .header .logo {
   display: flex;
   align-items: center;
+}
+
+.title {
+  text-align: center;
+  font-size: 3rem;
+  font-weight: bold;
+  margin: 2rem 0;
 }
 
 .home {
@@ -175,3 +246,4 @@ nav ul li a:hover {
   transform: translate(-50%, -50%); /* 中央揃え */
   z-index: -1; /* 画像を背面に配置 */
 }
+
