--- a/src/templates/accounts/login.html
+++ b/src/templates/accounts/login.html
@@ -5,10 +5,9 @@ Login
 {% endblock %}
 
 {% block content %}
-<h2>Login page</h2>
+<h2 class="title">Login page</h2>
 <form method="post"> {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" id="save" value="Login">
+  <input class="home_btn" type="submit" id="save" value="Login">
 </form>
-<button type="button" onclick="location.href='/accounts/create';">Sign up</button>
 {% endblock %}
