[FIX] Fixed broken links and altered some urls

--- a/src/templates/home/home.html
+++ b/src/templates/home/home.html
@@ -12,7 +12,7 @@ Home
   </div>
   <div class="home_content">
     <h1 class="private_home_title">Let's plan <br> weekly menus</h1>
-    <button class="home_btn" onclick='location.href="/";'>Start</button>
+    <button class="home_btn" onclick='location.href="/home/personal/";'>Start</button>
   </div>
 </main>
 {% endblock %}
