--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,16 +11,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <header class="header">
-    <div class="logo">
+    <div class="logo" onclick="location.href='/home/recipes/';">
       <img src="{% static 'img/logo.png' %}" alt="logo" />
       <h1>WeeklyBites</h1>
     </div>
     <nav>
       <ul>
         <li>
-          <a href="">item1</a>
-          <a href="">item2</a>
-          <a href="">item3</a>
+          <a href="{% url 'home:recipe_list' %}">Home</a>
+          <a href="{% url 'home:weekly_recipe_list' %}">Weekly Recipe List</a>
+          <a href="{% url 'home:personal' %}">Personal</a>
         </li>
       </ul>
     </nav>
