--- a/src/templates/home/recipe_list.html
+++ b/src/templates/home/recipe_list.html
@@ -8,7 +8,7 @@ Recipe List
 
 <div class="recipies">
   {% for recipe in recipes %}
-  <div class="recipe_item" onclick='location.href="/home/{{recipe.id}}";'>
+  <div class="recipe_item" onclick='location.href="/home/recipes/{{recipe.id}}";'>
     <p> {{recipe.recipeName}} </p>
     <img src="{{recipe.img}}?interpolation=lanczos-none&fit=around|320:320&crop=320:320;*,*">
   </div>
