--- a/src/templates/home/weeklyrecipe_list.html
+++ b/src/templates/home/weeklyrecipe_list.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %} Weekly Recipe List {% endblock %} 
+{% block title %} Weekly Recipe List {% endblock %}
 {% block content %}
 
 <div class="recipies">
   {% for recipe in weekly_recipes %}
-  <div class="recipe_item" onclick='location.href="/home/{{recipe.id}}";'>
+  <div class="recipe_item" onclick='location.href="/home/recipes/{{recipe.id}}";'>
     <p>{{recipe.recipeName}}</p>
     <img
       src="{{recipe.img}}?interpolation=lanczos-none&fit=around|320:320&crop=320:320;*,*"
