--- a/src/templates/public/home.html
+++ b/src/templates/public/home.html
@@ -13,7 +13,7 @@ Home
   <div class="home_content">
     <h1 class="public_home_title">WeeklyBites</h1>
     <h2 class="public_home_subtitle">Discover new recipes every week!</h2>
-    <button class="home_btn" onclick='location.href="/accounts/create/";'>Singup</button>
+    <button class="home_btn" onclick='location.href="/accounts/create/";'>Sign up</button>
     <button class="home_btn" onclick='location.href="/accounts/login/";'>Login</button>
   </div>
 
