--- a/src/templates/home/recipe_detail.html
+++ b/src/templates/home/recipe_detail.html
@@ -19,5 +19,6 @@
   {% endfor %}
 {% endwith %}
 </div>
+<a href="{% url 'home:add_recipe' %}?q={{recipe.pk}}" class="floating_btn" type="submit">Add to List</a>
 
 {% endblock %}
