Added new page where recipes are grouped by ingredients

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,6 +19,7 @@
       <ul>
         <li>
           <a href="{% url 'home:recipe_list' %}">Home</a>
+          <a href="{% url 'home:ingredients_list' %}">Ingredients</a>
           <a href="{% url 'home:weekly_recipe_list' %}">Weekly Recipe List</a>
           <a href="{% url 'home:personal' %}">Personal</a>
         </li>
