--- a/src/templates/home/ingredient_list.html
+++ b/src/templates/home/ingredient_list.html
@@ -9,12 +9,12 @@ Ingredients List
 {% regroup items by category as category_list %}
 
 {% for category in category_list %}
-<h1> {{category.grouper.name}} </h1>
+<h1 class="category_name"> {{category.grouper.name}} </h1>
   <div class="recipies">
     {% for item in category.list %}
     <div class="recipe_item" onclick='location.href="/home/recipes/{{item.recipe.id}}";'>
-      <p> {{item.recipe}} </p>
-      <img src="{{item.recipe.img}}?interpolation=lanczos-none&fit=around|320:320&crop=320:320;*,*">
+      <p class="recipe_item_name"> {{item.recipe}} </p>
+      <img class="recipe_item_img" src="{{item.recipe.img}}?interpolation=lanczos-none&fit=around|320:320&crop=320:320;*,*">
     </div>
     {% endfor %}
   </div>
