--- a/src/templates/home/weeklyrecipe_list.html
+++ b/src/templates/home/weeklyrecipe_list.html
@@ -5,8 +5,9 @@
 <div class="recipies">
   {% for recipe in weekly_recipes %}
   <div class="recipe_item" onclick='location.href="/home/recipes/{{recipe.id}}";'>
-    <p>{{recipe.recipeName}}</p>
+    <p class="recipe_item_name">{{recipe.recipeName}}</p>
     <img
+      class="recipe_item_img"
       src="{{recipe.img}}?interpolation=lanczos-none&fit=around|320:320&crop=320:320;*,*"
     />
   </div>
