--- a/src/static/css/basic.css
+++ b/src/static/css/basic.css
@@ -162,14 +162,19 @@ form ul li {
   margin: 20px 10px;
   position: fixed;
   z-index: 9999;
-  right: 40px;
-  bottom: 40px;
+  right: 2rem;
+  bottom: 2rem;
   text-decoration: none;
 }
 
 .floating_btn.logout {
-  top: 30rem;
+  top: 5rem;
   bottom: auto;
+  padding: 13px 14px;
+}
+
+.floating_btn.share {
+  bottom: 6rem;
   padding: 13px 14px;
 }
 
@@ -201,14 +206,14 @@ form ul li {
   display: grid;
   border: 2px solid;
   border-color: black;
-  margin: .5rem 1rem;
+  margin: 0.5rem 1rem;
   justify-content: center;
   text-align: center;
 }
 
 .recipe_item_name {
   width: 100%;
-  padding: .3rem;
+  padding: 0.3rem;
   font-size: 1.2rem;
   font-weight: bold;
   overflow-wrap: break-word;
@@ -220,7 +225,6 @@ form ul li {
   border-top: black 1px solid;
   border-bottom: black 1px solid;
 }
-
 
 .recipe_details {
   text-align: center;
@@ -251,13 +255,13 @@ form ul li {
 .recipe_details_ingredients > li > p {
   font-size: 1.5rem;
   font-weight: bold;
-  margin: .3rem 0;
+  margin: 0.3rem 0;
 }
 
 .recipe_details_ingredients > li > a {
   font-size: 1.2rem;
   font-weight: bold;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 .category_name {
@@ -266,11 +270,11 @@ form ul li {
   margin-top: 1.5rem;
 }
 
-.personal_name{
+.personal_name {
   text-align: center;
 }
 
-.personal_recipe_name{
+.personal_recipe_name {
   text-align: center;
   margin-bottom: 1rem;
 }
@@ -280,12 +284,12 @@ form ul li {
   display: flex;
 }
 
-.personal_ingredients_name{
+.personal_ingredients_name {
   text-align: center;
   margin-top: 3rem;
 }
 
-.personal_ingredients{
+.personal_ingredients {
   margin: 0;
   text-align: center;
 }
