--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -29,4 +29,6 @@
   <body>
     <div id="content">{% block content %}{% endblock %}</div>
   </body>
+  {% block scripts %}
+  {% endblock %}
 </html>
