--- a/src/templates/home/recipe_detail.html
+++ b/src/templates/home/recipe_detail.html
@@ -16,7 +16,7 @@
     <li class="recipe_details_ingredient">
     <p>{{ ingredient }} </p>
     <a href="{% url 'external:rakuten_ichiba_item_search' %}?grocery_name={{ ingredient }}" target="_blank">
-      Buy in Rakuten Ichiba
+      Buy at Rakuten Ichiba
     </a>
     </li>
   {% endfor %}
