--- a/src/templates/home/personal.html
+++ b/src/templates/home/personal.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% load home_extras %}
+{% load static %}
 
 {% block title %}
 Personal
 {% endblock %}
 
 {% block content %}
-<h2 class="personal_name">Welcome {{ user.first_name }}</h2>
+<h2 class="personal_page_text">Welcome {{ user.first_name }}</h2>
 
 <a class="floating_btn" href="{% url 'home:clear_personal' %}">Clear</a>
 <a class="floating_btn share" href="{% url 'home:share' %}?items={{item_list}}" onclick="copyText()" target="_blank">Share</a>
@@ -15,7 +16,7 @@ Personal
   <h2 class="personal_recipe_name">Recipes</h2>
   <div class="recipies">
     {% for index, recipe in recipes|doEnumerate %}
-      <div class="recipe_item"><p>Day {{index|add:1}}: <br><a href="{{recipe.link}}"><p class="recipe_item_name">{{recipe.recipeName}}</p></a><img class="recipe_item_img" src="{{recipe.img}}?interpolation=lanczos-none&fit=around|320:320&crop=320:320;*,*"></p></div>
+      <div class="recipe_item"><p class="recipe_item_name">Day {{index|add:1}}: <br><a href="{{recipe.link}}"><p class="recipe_item_name">{{recipe.recipeName}}</p></a><img class="recipe_item_img" src="{{recipe.img}}?interpolation=lanczos-none&fit=around|320:320&crop=320:320;*,*"></p></div>
     {% endfor %}
   </div>
   <div>
@@ -26,7 +27,7 @@ Personal
       <li class="recipe_details_ingredient">
       <p>{{ ingredient }} </p>
       <a class="recipe_details_link" href="{% url 'external:rakuten_ichiba_item_search' %}?grocery_name={{ ingredient }}" target="_blank">
-        Buy in Rakuten Ichiba
+        Buy at Rakuten Ichiba
       </a>
       </li>
       {% endif %}
@@ -34,7 +35,8 @@ Personal
     </ul>
   </div>
 {% else %}
-  <p>Explore the weekly recipes!</p>
+  <p class="personal_page_text">Explore the weekly recipes!</p>
+  <img class="personal_page_non_exist_img" src="{% static 'img/veggies.png' %}" alt="veggies" />
 {% endif %}
 
 <form method="post" action="{% url 'accounts:logout' %}"> {% csrf_token %}
